# accelerate

./: .appveyor.yml  .authorspellings  .dockerignore  .ghci  .gitignore  .gitmodules  .jenkins_script.sh  .mailmap  .run_benchmarks.sh  .travis.yml  CHANGELOG.md  Config.hs  Digest.hs  Dockerfile  HACKING.md  INSTALL  LICENSE  Main.hs  Makefile  README  README.md  Setup.hs  TODO-nofib.md  TODO.md  Vec3.hs  accelerate-examples.cabal  accelerate-examples.template  accelerate-fluid.cabal  accelerate-hashcat.cabal  accelerate-kmeans.cabal  accelerate-ray.cabal  accelerate.buildinfo.in  accelerate.cabal  cabal.project  changelog.md  configure.ac  flake.nix  ghci  hie.yaml  install_all.sh  (+13 more)
.github/: issue_template.md  pull_request_template.md
Data/: Atomic.hs
Gloss/: Draw.hs  Event.hs
Ray/: Intersect.hs  Trace.hs
Scene/: Color.hs  Light.hs  Object.hs  State.hs  World.hs
Test/: Base.hs  FFT.hs  Foreign.hs  Imaginary.hs  IndexSpace.hs  Issues.hs  Mapping.hs  PrefixSum.hs  Prelude.hs  Sharing.hs  Spectral.hs
accelerate-backend-kit/: LICENSE  Test.hs  accelerate-backend-kit.cabal
accelerate-backend-kit/Data/Array/Accelerate/: SimpleAST.hs  SimpleConverter.hs
accelerate-buildbot/: accelerate-buildbot.cabal
accelerate-buildbot/misc/: banner.txt
accelerate-buildbot/src/: Args.hs  Benchmarks.hs  Build.hs  Config.hs  Darcs.hs  Main.hs  Util.hs
accelerate-cuda/: accelerate-cuda.cabal  configure  configure.ac
accelerate-cuda/Data/Array/Accelerate/: CUDA.hs
accelerate-cuda/Data/Array/Accelerate/CUDA/: AST.hs  CodeGen.hs  Compile.hs  Debug.hs  Execute.hs  State.hs
accelerate-cuda/Data/Array/Accelerate/CUDA/Analysis/: Device.hs  Hash.hs  Launch.hs
accelerate-cuda/Data/Array/Accelerate/CUDA/Array/: Data.hs  Prim.hs  Sugar.hs  Table.hs
accelerate-cuda/Data/Array/Accelerate/CUDA/CodeGen/: Data.hs  Skeleton.hs  Stencil.hs  Tuple.hs
accelerate-cuda/Data/Array/Accelerate/Internal/: Check.hs  Trace.hs
accelerate-cuda/cubits/: accelerate_cuda_function.h  accelerate_cuda_shape.h.in  accelerate_cuda_stencil.h  accelerate_cuda_util.h  backpermute.inl  fold.inl  foldAll.inl  foldSeg.inl  generate.inl  map.inl  permute.inl  reduce.inl  replicate.inl  slice.inl  stencil.inl  stencil2.inl  zipWith.inl
accelerate-cuda/cubits/thrust/: exclusive_scan.inl  inclusive_scan.inl  safe_scan_intervals.inl
accelerate-cuda/include/: accelerate.h
accelerate-cuda/utils/: Paths_accelerate_cuda.hs  README  dot_ghci
accelerate-examples/: Makefile  accelerate-examples.cabal  accelerate-examples.template
accelerate-examples/data/matrices/: README.txt
accelerate-examples/src/: Config.hs  Main.hs  Test.hs  Util.hs
accelerate-examples/src/common/: Benchmark.hs  Random.hs  Validate.hs
accelerate-examples/src/image-processing/: Canny.hs  IntegralImage.hs  PGM.hs
accelerate-examples/src/io/: Main.hs
accelerate-examples/src/primitives/: Fold.hs  Map.hs  ScanSeg.hs
accelerate-examples/src/simple/: DotP.hs  Filter.hs  Radix.hs  SASUM.hs  SAXPY.hs  SMVM.hs
accelerate-examples/src/simple/SMVM/: MatrixMarket.hs
accelerate-examples/tests/image-processing/: Canny.hs  IntegralImage.hs
accelerate-examples/tests/io/: BlockCopy.hs
accelerate-examples/tests/primitives/: Backpermute.hs  Permute.hs  ScanSeg.hs  Stencil.hs  Stencil2.hs  Zip.hs
accelerate-examples/tests/simple/: BlackScholes.hs  SharingRecovery.hs  SliceExamples.hs
accelerate-io/: accelerate-io.cabal
accelerate-io/Data/Array/Accelerate/IO/: BlockCopy.hs  Ptr.hs
app/: Main.hs
cbits/: align.h  atomic.c  clock.c  flags.c  flags.h  flags.inc  flags_debug.c  float128.c  getopt_long.c  monitoring.c  monitoring.inc  monitoring_debug.c
common/: Config.hs
cubits/: Parse.hs  accelerate_cuda_extras.h  accelerate_cuda_function.h  accelerate_cuda_shape.h  accelerate_cuda_stencil.h  accelerate_cuda_texture.h  accelerate_cuda_util.h  accelerate_cuda_utils.h  backpermute.c  backpermute.inl  fold.c  fold.inl  foldAll.inl  foldSeg.inl  foldSegAll.inl  fold_segmented.inl  generate.inl  map.c  map.inl  permute.c  permute.inl  reduce.inl  replicate.inl  scan.c  (+9 more)
examples/canny/: LICENSE  MainView.m  Makefile  Process.hs  README.md  beholder-Info.plist  beholder.cabal  configure.sh  main.m
examples/canny/English.lproj/: Main.xib
examples/canny/beholder/: Camera.h  Camera.m  Framer.h  Framer.m  MainView.h  MainView.m  Process.hs  beholderAppDelegate.h  beholderAppDelegate.m  beholder_Prefix.pch  configure.sh
examples/canny/beholder.xcodeproj/: project.pbxproj
examples/canny/beholder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/canny/beholder.xcodeproj/project.xcworkspace/xcuserdata/trevor.xcuserdatad/: UserInterfaceState.xcuserstate
examples/canny/beholder.xcodeproj/xcuserdata/trevor.xcuserdatad/xcschemes/: beholder.xcscheme
examples/canny/beholder/English.lproj/: Main.xib
examples/canny/beholder/beholder.xcodeproj/xcuserdata/trevor.xcuserdatad/xcschemes/: beholder.xcscheme  xcschememanagement.plist
examples/canny/src/: Canny.hs  Image.hs  Main.hs  SVM.hs
examples/canny/src-acc/: Canny.hs  Config.hs  Main.hs  Wildfire.hs
examples/canny/src-opencv/: CMakeLists.txt  Main.cpp  MainGPU.cpp  README.md
examples/crystal/: Config.hs  LICENSE  Main.hs  accelerate-crystal.cabal
examples/crystal/src/: Config.hs  Main.hs
examples/fluid/original/fluid/: fluid.cabal
examples/fluid/original/fluid/bench-scripts/: 100-runs.sh  bench-time.sh  clear-plot-data.sh  compile.sh
examples/fluid/original/fluid/src/: Constants.hs  Density.hs  Main.hs  Model.hs  UserEvent.hs
examples/n-body/visualizer/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile-e  NsightEclipse.xml  Visualize.hs  bodysystem.h  bodysystemacc.h  bodysystemacc_impl.h  bodysystemcpu.h  bodysystemcpu_impl.h  bodysystemcuda.cu  bodysystemcuda.h  bodysystemcuda_impl.h  nbody.cpp  readme.txt  render_particles.cpp  render_particles.h
src/broken/: LICENSE  accelerate-tests.cabal
src/broken/rasterize/: RasterizeAcc.hs  rasterize-test4.txt
tests-blockcopy/: accelerate-tests-blockcopy.cabal
tests-blockcopy/src/: Main.hs  fill_with_values.c
(+841 files in other folders)
